// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disables 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    disabled={true}
    focusedOpacity={0.7}
    onPress={[Function]}
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Push Me
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`matches last snapshot 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    disabled={false}
    focusedOpacity={0.7}
    onPress={[Function]}
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Push Me
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;
